# Euishi

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  conf.json  output.txt  output_euishi.txt
src/: counting.rs  flags.rs  getjson.rs  main.rs  movingfn.rs  outfile.rs  scrambling.rs  temps_file.rs  tests.rs  threads.rs  utils.rs
