[package]
name = "euishi-えういし"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"]}
image = "0.25.1"
lazy_static = "1.4.0"
# term_size = "0.3.2"
walkdir = "2.3.2"
